--- a/dashboard.html
+++ b/dashboard.html
@@ -111,7 +111,7 @@
             <a href="chat.html" class="sidebar-link">
                 <i class="fas fa-comment-medical"></i><span id="navChat">Chat</span>
             </a>
-            <a href="#" class="sidebar-link">
+            <a href="patients.html" class="sidebar-link">
                 <i class="fas fa-users"></i><span id="navPatients">Pacientes</span>
             </a>
             <a href="relatorios.html" class="sidebar-link">
@@ -550,6 +550,24 @@
                     }
                 }
                 const container = document.getElementById('patientsTableBody');
+
+                // Update top stats
+                document.getElementById('statActivePatients').innerText = chats.length;
+
+                const now = new Date();
+                const sevenDaysAgo = new Date(now.getTime() - (7 * 24 * 60 * 60 * 1000));
+                const activeThisWeek = chats.filter(c => {
+                    const d = c.data();
+                    return d.lastMessageAt && new Date(d.lastMessageAt) > sevenDaysAgo;
+                }).length;
+
+                const engagement = chats.length > 0 ? Math.round((activeThisWeek / chats.length) * 100) : 0;
+                document.getElementById('statEngagement').innerText = `${engagement}%`;
+                document.getElementById('lblGoal').innerText = `Ativos: ${activeThisWeek}`;
+
+                // For "Conversations/Month", we use total chats as a proxy since we don't have a global message counter
+                document.getElementById('statConversations').innerText = chats.length;
+                document.getElementById('statActiveDiff').innerText = chats.length > 0 ? `+${chats.length}` : '---';
 
                 if (chats.length === 0) {
                     container.innerHTML = `
