--- a/relatorios.html
+++ b/relatorios.html
@@ -164,7 +164,7 @@
             <a href="chat.html" class="sidebar-link">
                 <i class="fas fa-comment-medical"></i><span>Chat</span>
             </a>
-            <a href="#" class="sidebar-link">
+            <a href="patients.html" class="sidebar-link">
                 <i class="fas fa-users"></i><span>Pacientes</span>
             </a>
             <a href="relatorios.html" class="sidebar-link active">
